- Implement wxLocale::GetInfo() using CFLocale

wxMSW:

- Fixed infinite loop in wxThread::Wait() in console applications.
- Return the restored window size from GetSize() when window is minimized.
- wxCheckListBox now looks more native, especially under XP (Marcin Malich).
- Allow tooltips longer than 64 (up to 128) characters in wxTaskBarIcon
- Fix centering wxFileDialog

wxX11:

- Added mouse wheel support (David Hart).
- Make Enter key activate the default button (David Hart).


2.8.8
-----

All:

- Fixed bug with parsing some dates in wxDateTime (Bob Pesner)

All (GUI):

- Added wxWindow::GetNextSibling() and GetPrevSibling()
- Improve wximage::ResampleBox() (Mihai Ciocarlie)
- Implemented ScrollList() in generic wxListCtrl (Tim Kosse)

wxMSW:

- Fix rare bug with messages delivered to wrong wxSocket (Tim Kosse)


2.8.7
-----

All:

- Fixed bug with default proxy destruction in wxURL (Axel Gembe).

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).

wxGTK:

- Added gtk.window.force-background-colour wxSystemOptions option to work around
  a background colour bug in the gtk-qt theme under KDE.
- Implemented wxGetClientDisplayRect() correctly for wxGTK and X11-based ports.


2.8.6
-----

All:

- Fixed another bug in wxFileConfig when deleting entries (Axel Gembe)
- Added Portuguese translation (Antonio Cardoso Martins)


2.8.5
-----

All (GUI):

- Added colour normalization to PNM image handler (Ray Johnston)
- Fixed selecting part of word from right to left in wxHTML (Michael Hieke)
- Selecting text in wxHTML with character precision was made easier, it's
  enough to select half of a character (Michael Hieke)
- Significantly improved startup times of XRC-based applications using
  embedded resources on Unix (requires resources recompilation)
- Fixed freeing of "static" alpha data in wxImage (Axel Gembe)
- Don't invalidate the font in SetNativeFontInfo[Desc]() if the string is